<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:elevation="3dp"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_bookmark"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/save"
            android:layout_marginStart="20dp"
            android:textColor="#006DDB"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:background="#EFEFEF"
        android:layout_marginTop="15dp"
        android:layout_height="1dip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#212121"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        android:text="@string/do_you_want_to_save"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#757575"
            android:enabled="false"
            android:visibility="gone"
            android:textSize="12sp"
            android:id="@+id/cash_collected"
            android:padding="10dp"
            android:text="@string/cash_collected" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#757575"
            android:id="@+id/invoice_print"
            android:textSize="12sp"
            android:padding="10dp"
            android:text="@string/invoice_print" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#757575"
            android:id="@+id/delivery_print"
            android:visibility="gone"
            android:textSize="12sp"
            android:padding="10dp"
            android:text="@string/delivery_order_print" />


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/save_and_print"
            android:id="@+id/title"
            android:visibility="gone"
            android:textStyle="bold"
            android:textColor="#757575"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:visibility="gone"
            android:background="@color/white"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:id="@+id/copy_layout"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textColor="#212121"
                android:textSize="12sp"
                android:text="@string/no_of_copies"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="0dip"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_marginStart="40dp"
                android:background="?actionBarItemBackground"
                android:id="@+id/copy_minus"
                android:src="@drawable/ic_baseline_remove_circle_24"
                android:layout_gravity="center"
                android:layout_height="30dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_1"
                android:id="@+id/copy"
                android:layout_marginStart="20dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="30dp"
                android:id="@+id/copy_plus"
                android:background="?actionBarItemBackground"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_add_circle_24"
                android:layout_gravity="center"
                android:layout_height="30dp"
                android:contentDescription="@string/todo" />

        </LinearLayout>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#757575"
            android:enabled="false"
            android:visibility="gone"
            android:textSize="12sp"
            android:id="@+id/email_invoice"
            android:padding="10dp"
            android:text="@string/email_invoice" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/buttonNo"
            android:layout_width="80dp"
            android:textSize="12sp"
            android:layout_marginEnd="10dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/button_background_cancel"
            android:text="@string/no"
            android:textColor="#006DDB"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="80dp"
            android:textSize="12sp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:text="@string/yes"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>