<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:elevation="3dp"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_bookmark"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/reorder_confirmation"
            android:layout_marginStart="20dp"
            android:textColor="#006DDB"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:background="#EFEFEF"
        android:layout_marginTop="15dp"
        android:layout_height="1dip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#212121"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        android:text="@string/are_you_want_to_sure_reorder_this_products"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#757575"
            android:id="@+id/reorder_qty_check"
            android:textSize="12sp"
            android:padding="10dp"
            android:text="@string/with_quantity" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/save_and_print"
            android:id="@+id/title"
            android:visibility="gone"
            android:textStyle="bold"
            android:textColor="#757575"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/buttonNo"
            android:layout_width="80dp"
            android:textSize="12sp"
            android:layout_marginEnd="10dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/button_background_cancel"
            android:text="@string/cancel"
            android:textColor="#006DDB"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="80dp"
            android:textSize="12sp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:text="@string/dialog_ok"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>